fix: regenerate formulas and fix unused param lint error

--- a/internal/formula/formulas/mol-digest-generate.formula.toml
+++ b/internal/formula/formulas/mol-digest-generate.formula.toml
@@ -78,7 +78,7 @@ Gather activity data from each rig in the town.
 
 **1. List accessible rigs:**
 ```bash
-gt rig list
+gt rigs
 # Returns list of rigs: gastown, beads, etc.
 ```
 
