--- a/internal/formula/formulas/mol-orphan-scan.formula.toml
+++ b/internal/formula/formulas/mol-orphan-scan.formula.toml
@@ -57,7 +57,7 @@ gt hook               # Shows scope in hook_bead
 
 ```bash
 # If town-wide
-gt rig list                 # Get list of all rigs
+gt rigs                     # Get list of all rigs
 
 # If specific rig
 # Just use that rig
