--- a/internal/formula/formulas/mol-town-shutdown.formula.toml
+++ b/internal/formula/formulas/mol-town-shutdown.formula.toml
@@ -133,7 +133,7 @@ Archive and clear all agent inboxes across all rigs.
 
 ```bash
 # For each rig
-for rig in $(gt rig list --names); do
+for rig in $(gt rigs --names); do
   gt mail clear $rig/witness --archive
   gt mail clear $rig/refinery --archive
 done
