docs: add CLAUDE.md with JIT tables for Daedalus rig
Create crew context file following pattern from other rigs (athena, etc).
Includes JIT tables for:
- Finding code by feature area
- Understanding architecture
- Writing code standards
- Common gt commands

Remove CLAUDE.md from .gitignore to track it like other rigs.

--- a/.gitignore
+++ b/.gitignore
@@ -46,8 +46,7 @@ state.json
 .beads/sync_base.jsonl
 .beads-wisp/
 
-# Clone-specific CLAUDE.md (regenerated locally per clone)
-CLAUDE.md
+# Note: CLAUDE.md is now tracked (provides crew context like other rigs)
 
 # Embedded formulas are committed so `go install @latest` works
 # Run `go generate ./...` after modifying .beads/formulas/
