--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -30,7 +30,9 @@ jobs:
           git config --global user.email "ci@gastown.test"
 
       - name: Install beads (bd)
-        run: go install github.com/steveyegge/beads/cmd/bd@latest
+        # Pin to v0.47.0 to avoid breaking changes in v0.47.1+
+        # (prefix extraction and routing.mode=auto issues)
+        run: go install github.com/steveyegge/beads/cmd/bd@v0.47.0
 
       - name: Add to PATH
         run: echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
