--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -235,7 +235,9 @@ jobs:
           git config --global user.email "ci@gastown.test"
 
       - name: Install beads (bd)
-        run: go install github.com/steveyegge/beads/cmd/bd@latest
+        # Pin to v0.47.0 to avoid breaking changes in v0.47.1+
+        # (prefix extraction and routing.mode=auto issues)
+        run: go install github.com/steveyegge/beads/cmd/bd@v0.47.0
 
       - name: Build gt
         run: go build -v -o gt ./cmd/gt
@@ -244,4 +246,4 @@ jobs:
         run: echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
 
       - name: Integration Tests
-        run: go test -tags=integration -timeout=5m -v ./internal/cmd/...
+        run: go test -tags=integration -timeout=12m -v ./internal/cmd/...
