--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,4 @@ CLAUDE.md
 
 # Embedded formulas are committed so `go install @latest` works
 # Run `go generate ./...` after modifying .beads/formulas/
+.events.jsonl
